--- a/src/components/questions.astro
+++ b/src/components/questions.astro
@@ -5,12 +5,11 @@
     <meta name="viewport" content="initial-scale=1, width=device-width" />
     <link
       rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
     />
   </head>
   <body>
-    <div class="hero-actions">
-      <div class="text-content-title">
+    <div class="pageElement">
+      <div class="textContent">
         <b class="title">Frequently Asked Questions</b>
       </div>
       <div class="subtitle">
@@ -107,28 +106,7 @@
 }
 
 :root {
-  /* fonts */
-  --single-line-body-base: Inter;
-
-  /* font sizes */
-  --single-line-body-base-size: 1rem;
-
-  /* Colors */
-  --background-brand-default: #2c2c2c;
-  --text-default-default: #1e1e1e;
-  --text-brand-on-brand: #f5f5f5;
-
-  /* Spacing */
-
-
-  /* Gaps */
-  --gap-5xs: 0.5rem;
-
-  /* Paddings */
-  --padding-xs: 0.75rem;
-
-  /* Border radiuses */
-  --br-5xs: 8px;
+  font-family: Inter;
 }
 
 .discord{
@@ -149,11 +127,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  gap: var(--space-200);
   text-align: center;
-  font-size: var(--title-hero-size);
   color: #001f3a;
-  font-family: var(--single-line-body-base);
   margin:0;
   padding-top: -100px;
 }
@@ -169,7 +144,7 @@
 }
 
 
-.hero-actions {
+.pageElement {
   width: 100%;
   position: relative;
   height: 1300px;
@@ -206,17 +181,18 @@
   background-color: #8cc7fb;
   margin:0.5rem
 }
+.title{
+  font-size: 50px;
+}
 
 .question{
   font-size: 35px;
   padding: 0;
-  font-family: var(--single-line-body-base);
   color:#001f3a;
 }
 
 .answer{
   font-size: 22px;
-  font-family: var(--single-line-body-base);
   color:#001f3a;
 }
 
@@ -231,7 +207,7 @@
   .answer{
     font-size: 18px;
   }
-  .hero-actions{
+  .pageElement{
     height:1200px
   }
 }
@@ -254,7 +230,7 @@
   .answer{
     font-size: 13px;
   }
-  .hero-actions{
+  .pageElement{
     height:1020px
   }
 }
@@ -278,7 +254,7 @@
   .answer{
     font-size: 12px;
   }
-  .hero-actions{
+  .pageElement{
     height:820px
   }
   .discord{
@@ -307,7 +283,7 @@
   .answer{
     font-size: 8.75px;
   }
-  .hero-actions{
+  .pageElement{
     height:620px
   }
   .discord{
@@ -333,7 +309,7 @@
   .answer{
     font-size: 7.25px;
   }
-  .hero-actions{
+  .pageElement{
     height:605px
   }
   .discord{
