--- a/src/components/title.astro
+++ b/src/components/title.astro
@@ -49,12 +49,13 @@
 
 .title{
   font-size: 120px;
-  margin-bottom: -0.75rem;
+  margin-bottom: -1.45rem;
 }
 .subtitle {
-  padding-bottom: 10px;
+  padding-bottom: px;
   font-size: 40px;
-  font-weight: 500;
+  font-weight: 400;
+  
 }
 .box {
   text-align: center;
@@ -113,7 +114,7 @@
   background-color: #75bcf6;
   height: 2.5rem;
   border-radius: 0.5rem;
-  margin-top: -0.5rem;
+  margin-top: 1rem;
 }
 .title{
   font-size: 100px;
