fixed resizing issues

--- a/src/components/info.astro
+++ b/src/components/info.astro
@@ -247,6 +247,9 @@
   margin-bottom: -0.75rem;
 }
 @media (max-width:1140px){
+  .pageElement{
+    margin-top: -1.5rem;
+  }
   .codeninjas{
     height: 17rem;
   }
@@ -368,7 +371,7 @@
     margin:-1rem;
   }
   .pageElement{
-    padding-bottom: 41.5rem;
+    padding-bottom: 43rem;
   }
   
   .scheduleText{
@@ -446,7 +449,7 @@
   .venuelabel,
   .scheduleText{
     font-size: 24px;
-    padding-bottom: 1rem;
+    padding-bottom: 0.5rem;
   }
   .timeInfo{
     font-size: 8.1px;
