--- a/src/components/title.astro
+++ b/src/components/title.astro
@@ -52,7 +52,7 @@
   margin-bottom: -1.45rem;
 }
 .subtitle {
-  padding-bottom: px;
+  padding-bottom: 0px;
   font-size: 40px;
   font-weight: 400;
   
@@ -127,16 +127,21 @@
   }
   .subtitle{
     font-size: 30px;
-    padding-bottom: 15px;
+    padding-bottom: 5px;
+    margin-bottom: 0px;
   }
   .title{
     font-size: 90px;
+    padding-bottom: 5px;
   }
   .button{
     width: 12rem;
     height: 2rem;
+    margin-top: 0px;
   }
   .sign-up{
+    padding-top: 0px;
+    margin-top: -2rem;
     font-size: 1rem;
   }
 
@@ -148,6 +153,7 @@
     padding-bottom: 11.5rem;
   }
   .subtitle{
+    padding-top: 5px;
     font-size: 25px;
     padding-bottom: 12px;
   }
