--- a/src/components/sponsors.astro
+++ b/src/components/sponsors.astro
@@ -14,14 +14,15 @@
         <p class="subtitle">Thank you to all our sponsors for making Hack4Youth possible!</p>
         <div class = "sponsors">
           <div class = "row">
-            <a href="https://1password.com/" target = "_blank"><img alt = "1Password" class = "image" src="/pictures/sponsors/1Password.png"></a>
+            <a href="https://toolbox.hackclub.com/?category=&query=" target = "_blank"><img alt = "Hack Club" class = "image" src="/pictures/sponsors/HackClub.png"></a>
             <a href="https://www.codeninjas.com/richmond-bc-ca" target = "_blank"><img alt = "CodeNinjas" class = "image" src="/pictures/sponsors/CodeNinjas.png"></a>
             <a href="https://gen.xyz/" target = "_blank"><img alt = ".xyz" class = "image" src="/pictures/sponsors/xyz-logo-color.png"></a>
           </div>
           <div class = "row">
-            <a href="" target = ""><img alt = "???" class = "image" src="/pictures/sponsors/question.png"></a>
-            <a href="" target = ""><img alt = "???" class = "image" src="/pictures/sponsors/question.png"></a>
-            <a href="" target = ""><img alt = "???" class = "image" src="/pictures/sponsors/question.png"></a>
+            <a href="https://1password.com/" target = "_blank"><img alt = "1Password" class = "image" src="/pictures/sponsors/1Password.png"></a>
+            <a ><img alt = "???" class = "image" src="/pictures/sponsors/blank.png"></a>
+            <a ><img alt = "???" class = "image" src="/pictures/sponsors/blank.png"></a>
+
           </div>
         </div>
       </div>
