--- a/src/components/title.astro
+++ b/src/components/title.astro
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div class="page">
-      <img class="img-icon" alt="" src="./pictures/venue.jpg" />
+      <img class="img-icon" alt="" src="./pictures/venue2.jpg" />
       <div class="blue"/>
       <section class="box">
         <h1 class="title">Hack4Youth</h1>
